--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
          <li> Docker </li>
          <li> Ansible </li>
          <li> Integración contínua: Madurez y productividad en el desarrollo de Software. </li>
+         <li> Kubernets </li>
      </ul>
 </body>
 </html>
