--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
          <li> Docker: Creando containers sin dolores de cabeza </li>
          <li> Ansible </li>
          <li> Integración contínua: Madurez y productividad en el desarrollo de Software. </li>
-         <li> Kubernets </li>
+         <li> Kubernets: Introducción a la orquetas de containers </li>
      </ul>
 </body>
 </html>
